--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "json-server": "^0.16.1"
+        "@babel/core": "^7.9.0",
+        "@babel/preset-env": "^7.9.5",
+        "babel-loader": "^8.1.0",
+        "core-js": "^3.6.5",
+        "json-server": "^0.16.1",
+        "webpack": "^4.46.0",
+        "webpack-cli": "^4.10.0"
     }
 }
